[package]
name = "pdex"
version = "0.1.0"
authors = ["_evelyn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "2.33", features = ["yaml"] }
